# fluster

./: .gitignore  Cargo.toml  Readme.md  deny.toml
locales/: en.yml
scripts/: update-icons.sh
src/: gui.rs  main.rs
src/gui/: context.rs  theme.rs
src/gui/components/: button.rs  checkbox.rs  icon.rs  input_field.rs  login_card.rs  select.rs
src/gui/pages/: login.rs  register.rs
